# ChangeLog for sys-devel/make
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/make/ChangeLog,v 1.61 2010/01/17 00:44:26 vapier Exp $

*make-3.81-r1 (17 Jan 2010)

  17 Jan 2010; Mike Frysinger <vapier@gentoo.org> +make-3.81-r1.ebuild,
  +files/make-3.81-long-cmdline.patch:
  Apply patch from upstream for long command lines #301116 by Priit Laes.

  07 Dec 2008; Mike Frysinger <vapier@gentoo.org> make-3.80-r4.ebuild,
  make-3.81.ebuild:
  Switch to emake in src_install and drop USE=build cruft.

  05 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +files/make-3.81-tests-lang.patch, make-3.81.ebuild:
  Grab fix from upstream for building in non-english locales #149147 by Ronny
  Peine.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> make-3.81.ebuild:
  Added ~sparc-fbsd keyword.

  02 Oct 2006; Daniel Gryniewicz <dang@gentoo.org> make-3.81.ebuild:
  Marked stable on amd64 for bug #149052

  27 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> make-3.81.ebuild:
  Stable on alpha wrt bug #149052

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> make-3.81.ebuild:
  Stable on sparc wrt #149052

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> make-3.81.ebuild:
  Stable on hppa wrt #149052

  26 Sep 2006; Joshua Jackson <tsunam@gentoo.org> make-3.81.ebuild:
  Stable x86; bug #149052

  25 Sep 2006; <nixnut@gentoo.org> make-3.81.ebuild:
  Stable on ppc wrt bug 149052

  25 Sep 2006; Markus Rothe <corsair@gentoo.org> make-3.81.ebuild:
  Stable on ppc64; bug #149052

  18 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> make-3.81.ebuild:
  Add runtime dependency on libintl when nls is enabled.

*make-3.81 (14 Apr 2006)

  14 Apr 2006; Mike Frysinger <vapier@gentoo.org> +make-3.81.ebuild:
  Version bump.

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> make-3.80-r4.ebuild:
  Add ~x86-fbsd keywords.

  19 Mar 2006; Fernando J. Pereda <ferdy@gentoo.org> make-3.80-r4.ebuild: