@@ -3,10 +3,10 @@ AUX make-3.81-darwin-library_search-dylib.patch 314 RMD160 e1e5bc3f1b2021b760501
 AUX make-3.81-eintr-loop.patch 421 RMD160 18c1e805119e7aa3f89cd54e8ff9345efe791eb4 SHA1 e77ba2ff41dd55ea783b1f53eeace41ec87ba232 SHA256 65718c0e664b5e8bc077e7c45ef09b06f3e7b0c9c13e40afce60e35db9c0fdad
 AUX make-3.81-interix.patch 370 RMD160 553bd42681624acc2a6c2390d1ebf05ff0469aea SHA1 7f867cdf501a977884c848bf78b231f72a2c8ffd SHA256 4e8c1523205b9e404acae5bc0b893b70270bd173e50e53e7312a6fe30766c254
 AUX make-3.81-interix3.patch 355 RMD160 587b627575399d53226d880a590ffac39b6eb81e SHA1 f4ba478c96124b04ead51d5ab4eb7594352a93d7 SHA256 8f142e93599f04bb47a1ee4a93a23ecbff00dd4b858eca930eb48fcdfdcf0b37
-AUX make-3.81-long-cmdline.patch 2733 RMD160 e2b4d8960482fb4cfcb202586ae2c725fd7f4762 SHA1 ce03cecfb3c261902561db2be7ac928cb297068c SHA256 22f1c23dc2bec949aafd188cb5a44d2a916dda936099c7b207e30fb92283f4c1
+AUX make-3.81-long-cmdline.patch 2823 RMD160 264e25b6c85ca9a68167e82c6c10a812852b2124 SHA1 226990c39bbf67e2d1d523eb41fa337fd48390b0 SHA256 0609897c53f29fca55b0f064a45af881cb1c98297c5c7f43e0bde154622f3c26
 AUX make-3.81-tests-lang.patch 1788 RMD160 c62f231b9bb5fef003e91f9a48b76832bd75b72d SHA1 2d77b19cafa2a24a840af3b7418399b7ee696ee2 SHA256 0d2f6b061ed2b09babbb851d1bcebcd20bc2331c799d469bfefa2a985774e486
 DIST make-3.81.tar.bz2 1151445 RMD160 79d418e1258ec0d6ba08b1431a4ade3fec54c2b2 SHA1 41ed86d941b9c8025aee45db56c0283169dcab3d SHA256 f3e69023771e23908f5d5592954d8271d3d6af09693cecfd29cee6fde8550dc8
 EBUILD make-3.81-r00.1.ebuild 2480 RMD160 1954b1e082f9e9835124c48aceea0e7f15f8e399 SHA1 2127954fac6673c934797edced027304b41ee7f0 SHA256 d93d6760f7002550049daeaa3e81dbfa7c77efefeb933ffdc71de3d355798c03
 EBUILD make-3.81-r1.ebuild 2536 RMD160 679c5c11264b3eddc181dbbebc6d85f282e52d99 SHA1 86a93e19c97d79355ea019feae50ffcd203c91ab SHA256 a757d2e0684377a146cf7d54617fbd665363b13fb20c54ab07b1a9b969d6750c
-MISC ChangeLog 7346 RMD160 8bcd64fe7794868da52f137c6e7edea22e5b3b0c SHA1 b02d840070f516e0473a7b1d177b8925f359aaaa SHA256 607a53919e2895de80f057522ec6d421bf0fa35ec6acc6667036a3eaf139ba30
+MISC ChangeLog 7504 RMD160 9e7337ef33125c84efa60f16cd6ff7cace0b4dd3 SHA1 fa673f2f232cdd8ca9db2d951c74ad397661cbcb SHA256 166dabc7d60971077e1ebb4de201fe78cab677f38e59bce062b630f3651b3fe3
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
